syntax = "proto3";

package lib;

message QuoterRequest {
}

message Deal {
    int32 location = 1;
    double price = 2;
    double quantity = 3;
}

message QuoterResponse {
    int32 spread = 1;
    repeated Deal ask_deals = 2;
    repeated Deal bid_deals = 3;
}

service Quoter {
    rpc ServerStreamingQuoter(QuoterRequest) returns (stream QuoterResponse) {}
}
